sticky headlines fixed, so they don´t scroll behind white top bar

--- a/css/style-board.css
+++ b/css/style-board.css
@@ -39,7 +39,7 @@
     margin-bottom: 0.5rem;
     color: var(--bg-blue);
     position: sticky;
-    top: -20px;
+    top: 0px;
     background-color: white;
     padding-top: 20px;
     padding-bottom: 20px;
